--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <link rel="icon" type="image/x-icon" href="icon/france.png">
 </head>
-<body class="menu-closed-body" onload="NavigationMenuFacade.addScrollLimiter()">
+<body class="menu-closed-body">
 <header class="menu-closed-header">
   <div id="line">
     <div class="logo">
@@ -106,7 +106,7 @@
       </div>
       <div class="joconda-holder">
         <div class="joconda-shadow"></div>
-        <img src="img/joconda.jpg" alt="Mona Lisa">
+        <img src="img/joconda.webp" alt="Mona Lisa">
       </div>
       <div class="welcome-slider-io">
         <div class="welcome-slider-io-metadata">
@@ -131,9 +131,9 @@
         </div>
       </div>
       <div class="main-menu-panorama">
-        <div class="sunset-holder"><img src="img/menu-1.jpg" alt="Sunset"></div>
-        <div class="hall-holder"><img src="img/menu-2.jpg" alt="Hall"></div>
-        <div class="view-holder"><img src="img/menu-3.jpg" alt="View"></div>
+        <div class="sunset-holder"><img src="img/menu-1.webp" alt="Sunset"></div>
+        <div class="hall-holder"><img src="img/menu-2.webp" alt="Hall"></div>
+        <div class="view-holder"><img src="img/menu-3.webp" alt="View"></div>
       </div>
     </div>
   </section>
@@ -145,7 +145,7 @@
       <div class="panorama-container">
         <div class="panorama">
           <a href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815">
-            <img src="img/visiting/royal-place.png" alt="Royal Place">
+            <img src="img/visiting/royal-palace.webp" alt="Royal Place">
             <h3>royal palace</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -154,7 +154,7 @@
         </div>
         <div class="panorama">
           <a href="">
-            <img src="img/visiting/demon-wing.png" alt="Demon Wing">
+            <img src="img/visiting/demon-wing.webp" alt="Demon Wing">
             <h3>demon wing</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -163,7 +163,7 @@
         </div>
         <div class="panorama">
           <a href="">
-            <img src="img/visiting/colonnade-perrault.png" alt="Colonnade Perrault">
+            <img src="img/visiting/colonnade-perrault.webp" alt="Colonnade Perrault">
             <h3>colonnade perrault</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -172,7 +172,7 @@
         </div>
         <div class="panorama">
           <a href="">
-            <img src="img/visiting/greek-hall.png" alt="Greek Hall">
+            <img src="img/visiting/greek-hall.webp" alt="Greek Hall">
             <h3>greek hall</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -181,7 +181,7 @@
         </div>
         <div class="panorama">
           <a href="">
-            <img src="img/visiting/mona-lisa.png" alt="Mona Lisa">
+            <img src="img/visiting/mona-lisa.webp" alt="Mona Lisa">
             <h3>mona lisa</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -189,7 +189,7 @@
         </div>
         <div class="panorama">
           <a href="">
-            <img src="img/visiting/night-palace.png" alt="Night Palace">
+            <img src="img/visiting/night-palace.webp" alt="Night Palace">
             <h3>night palace</h3>
             <div class="panorama-bar panorama-bar-non-hover"></div>
             <p class="top">360° Virtual Tour</p>
@@ -214,10 +214,10 @@
       </div>
       <div class="meninas-content">
         <div class="meninas-yellow-container">
-          <img class="meninas-yellow" src="img/explore/las-meninas-yellow.jpg" alt="Las Meninas Yellow">
+          <img class="meninas-yellow" src="img/explore/las-meninas-yellow.webp" alt="Las Meninas Yellow">
         </div>
         <div class="meninas-cleaned-container">
-          <img class="meninas-cleaned" src="img/explore/las-meninas-cleaned.png" alt="Las Meninas Cleaned">
+          <img class="meninas-cleaned" src="img/explore/las-meninas-cleaned.webp" alt="Las Meninas Cleaned">
         </div>
         <div class="meninas-branch-container">
           <img src="icon/explore/branch.svg" alt="branch" class="meninas-branch">
@@ -285,26 +285,8 @@
     <div class="content">
       <h2>art gallery</h2>
       <div class="container">
-        <div class="column">
-          <div class="picture" id="archer-and-deer"><img src="img/gallery/1.1-archer-and-deer.webp" alt="painting"></div>
-          <div class="picture" id="madame"><img src="img/gallery/1.2-venus_1.webp" alt="painting"></div>
-          <div class="picture" id="angel"><img src="img/gallery/1.3-angel.webp" alt="painting"></div>
-          <div class="picture" id="girls-in-the-field"><img src="img/gallery/1.4.webp" alt="painting"></div>
-        </div>
-        <div class="column upper">
-          <div class="picture" id="couple"><img src="img/gallery/2.1-couple_1.webp" alt="painting"></div>
-          <div class="picture" id="stairs"><img src="img/gallery/2.2.jpg" alt="painting"></div>
-          <div class="picture" id="arch" ><img src="img/gallery/2.3.jpg" alt="painting"></div>
-          <div class="picture" id="venus"><img src="img/gallery/2.4.webp" alt="painting"></div>
-        </div>
-        <div class="column">
-          <div class="picture" id="joconda"><img src="img/gallery/3.1.jpg" alt="painting"></div>
-          <div class="picture" id="roof"><img src="img/gallery/3.2-roof.webp" alt="painting"></div>
-          <div class="picture" id="pyramids"><img src="img/gallery/3.3.jpg" alt="painting"></div>
-          <div class="picture" id="party"><img src="img/gallery/3.4.jpg" alt="painting"></div>
-        </div>
-        <div class="gallery-fogging"></div>
       </div>
+      <div class="gallery-fogging"></div>
     </div>
   </section>
 
@@ -314,7 +296,7 @@
       <div class="bar"></div>
       <div class="container">
         <div class="item">
-          <img src="img/tickets/chronos.jpg" alt="Chronos">
+          <img src="img/tickets/chronos.webp" alt="Chronos">
         </div>
         <div class="item">
           <div class="ticket-type">
@@ -362,7 +344,7 @@
 
   <div class="main-gap">
     <div class="gap-container">
-      <img src="img/hall.jpg" alt="Hall" class="gap-view">
+      <img src="img/hall.webp" alt="Hall" class="gap-view">
     </div>
   </div>
 
@@ -448,8 +430,10 @@
 
 <script src="https://www.youtube.com/iframe_api"></script>
 
+<script src="scrypt/gallery.js"></script>
 <script src="scrypt/navigationMenuFacade.js"></script>
 <script src="scrypt/visiting.js"></script>
 <script src="scrypt/tickets.js"></script>
+<script src="scrypt/onStartUp.js"></script>
 </body>
 </html>
