--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Louvre</title>
   <link rel="preload" href="font/Roboto-Light.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preconnect" href="https://www.youtube.com">
 
   <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/common.css">
@@ -240,14 +241,10 @@
       <h2>video journey</h2>
       <p>Enter and visit one of the most famous museums in the world and enjoy
         masterpieces such as Mona Lisa or Hammurabi's Code</p>
-      <div class="video-large-container">
-        <iframe
-                class="video-large"
-                src="https://www.youtube.com/embed/zp1BXPX8jcU"
-                title="YouTube video player"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-        </iframe>
+      <div class="video-large-container" id="large-video-container">
+        <button id="large-video-pause">Play</button>
+        <input type="range" id="large-video-progress" value="0" min="0" max="100">
+        <input type="range" id="large-video-volume" value="100" min="0" max="100">
       </div>
       <div class="video-petite-container">
         <div class="video-petite-holder">
@@ -279,7 +276,11 @@
         </div>
       </div>
       <div class="scroller">
-        <button class="arrow-holder"><img src="icon/video/left-arrow.svg" alt="To the Left"></button>
+        <button class="arrow-holder">
+          <svg viewBox="0 0 10 12" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M5.4777 0.219168C5.87773 0.564178 5.94259 1.19347 5.62256 1.62473L2.37578 6.00004L5.62256 10.3753C5.94259 10.8066 5.87773 11.4359 5.4777 11.7809C5.07766 12.1259 4.49394 12.056 4.17391 11.6247L0 6.00004L4.17391 0.375342C4.49394 -0.0559202 5.07766 -0.125842 5.4777 0.219168ZM9.65184 0.219168C10.0519 0.564178 10.1167 1.19347 9.7967 1.62473L6.54992 6.00004L9.7967 10.3753C10.1167 10.8066 10.0519 11.4359 9.65184 11.7809C9.2518 12.1259 8.66808 12.056 8.34805 11.6247L4.17414 6.00004L8.34805 0.375342C8.66808 -0.0559202 9.2518 -0.125842 9.65184 0.219168Z" fill="#999999"/>
+          </svg>
+        </button>
         <button class="point-holder">
           <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
             <circle cx="6" cy="6" r="6" fill="#999999"/>
@@ -474,6 +475,7 @@
 <script src="scrypt/welcome/dispatcher.js"></script>
 <script src="scrypt/gallery/gallery-arranger.js"></script>
 <script src="scrypt/gallery/animator.js"></script>
+<script src="scrypt/video.js"></script>
 <script src="scrypt/navigationMenuFacade.js"></script>
 <script src="scrypt/visiting.js"></script>
 <script src="scrypt/tickets.js"></script>
